# Learning

./: .gitignore  README.md  pyproject.toml
algoritms/lists/binary_search/: iteratively.py  recursively.py
algoritms/lists/sorts/: bubble_sort.py  selection_sort.py  shaker_sort.py
education/: Parsing.py  abstraction_with_data.py
tests/: __init__.py
